<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">Emby</string>
    <string name="current_queue">Current Queue</string>
    <string name="error">Error</string>
    <string name="ok">OK</string>
    <string name="pause">Pause</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="init_text">00:00</string>
    <string name="play_pause_description">Play Pause Button</string>
    <string name="loading">Loading…</string>
    <string name="no_video_found">No video was found</string>
    <string name="version">Version: %1$s</string>
    <string name="preferences">PREFERENCES</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="movie">Movie</string>
    <string name="start_position">startPosition</string>
    <string name="search_results">Search Results</string>
    <string name="video_error_media_load_timeout">Media loading timed out</string>
    <string name="video_error_server_unaccessible">Media server was not reachable</string>
    <string name="video_error_unknown_error">Failed to load video</string>
    <string name="oops">Oops</string>
    <string name="btn_skip">Skip</string>
    <string name="btn_skip_hint">Skip this and log in manually</string>
    <string name="title_activity_startup">StartupActivity</string>
    <string name="action_settings">Settings</string>
    <string name="txt_loading">Loading...</string>
    <string name="title_activity_connect">ConnectActivity</string>
    <string name="txt_signinconnect">Sign in with Connect</string>
    <string name="title_activity_select_user">SelectUserActivity</string>
    <string name="selusr_pleaseselect">Please Select a User</string>
    <string name="error_fragment_message">Error</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="video_error_server_inaccessible">Server Inaccessible</string>
    <string name="home_title">Home</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_manually">Skip and Enter IP Address</string>
    <string name="txt_expired">Emby for Android TV is Expired</string>
    <string name="txt_expired_exp">This development version has expired.   Please look for an update or install from the store.  Thank you for using Emby!</string>
    <string name="byletter_letters">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="pref_login_behavior_title">Start Up Behavior</string>
    <string name="pref_show_login">Show Login Screen</string>
    <string name="pref_show_login_value">0</string>
    <string name="pref_auto_login_value">1</string>
    <string name="pref_playback">PLAYBACK</string>
    <string name="pref_max_bitrate_title">Max Streaming Bitrate</string>
    <string name="pref_auto_login">Automatically login as this user</string>
    <string name="settings_title">Settings</string>
    <string name="pref_startup_cat">LOG IN</string>
    <string name="pref_prompt_pw">Prompt For Password</string>
    <string name="pref_alt_pw_entry">Use custom d-pad password entry technique</string>
    <string name="pref_alt_pw_entry_desc">Enables numeric password entry with only d-pad keys without exposing the password to everyone in the room</string>
    <string name="pref_enable_hls_label">Enable HLS Streaming</string>
    <string name="title_activity_dpad_pw">Enter Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="dpad_entry_desc">Use the D-Pad on your remote to enter a numeric password.  Single-click a button for the first listed number or double-click for the second. e.g. Single-click \'up\' for 1 or double-click \'select\' for 5.  Hold down for 1 second and release the \'select\' button when finished or the left button to start over.</string>
    <string name="dpad_pw_cancel">* Hold the \'down\' button down for 1 second and release if you have an alpha password or need a keyboard for entry</string>
    <string name="chapters">Chapters</string>
    <string name="pref_auto_logoff_title">Auto Logoff Timeout</string>
    <string name="pref_general">GENERAL</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_app_settings">App Settings</string>
    <string name="lbl_logout">"Logout "</string>
    <string name="lbl_logout_connect">Logout of Connect</string>
    <string name="lbl_send_logs">Send Logs</string>
    <string name="lbl_library">Library</string>
    <string name="lbl_continue_watching">Continue Watching</string>
    <string name="lbl_latest_movies">Latest Movies</string>
    <string name="lbl_next_up">Next Up</string>
    <string name="lbl_next_up_tv">Next Up TV</string>
    <string name="lbl_on_now">On Now</string>
    <string name="lbl_views">Views</string>
    <string name="lbl_by_letter">By Letter</string>
    <string name="lbl_suggested">Suggested</string>
    <string name="lbl_genres">Genres</string>
    <string name="lbl_performers">Performers</string>
    <string name="lbl_search">Search</string>
    <string name="msg_not_implemented">" not implemented"</string>
    <string name="lbl_latest">Latest</string>
    <string name="lbl_by_name">By Name</string>
    <string name="lbl_favorites">Favorites</string>
    <string name="lbl_latest_recordings">Latest Recordings</string>
    <string name="lbl_coming_up">Coming Up</string>
    <string name="lbl_favorite_channels">Favorite Channels</string>
    <string name="lbl_other_channels">Other Channels</string>
    <string name="lbl_collections">Collections</string>
    <string name="lbl_movies">Movies</string>
    <string name="lbl_tv_series">TV Series</string>
    <string name="lbl_other">Other</string>
    <string name="lbl_latest_additions">Latest Additions</string>
    <string name="lbl_suggested_movies">Suggested Movies</string>
    <string name="lbl_because_you_watched">"Because you watched "</string>
    <string name="lbl_resume">Resume</string>
    <string name="lbl_play_all">Play All</string>
    <string name="lbl_shuffle_all">Shuffle All</string>
    <string name="lbl_play">Play</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_cancel_recording">Cancel Recording</string>
    <string name="lbl_cancel_series">Cancel Series</string>
    <string name="lbl_record_series">Record Series</string>
    <string name="lbl_record">Record</string>
    <string name="lbl_details">Details</string>
    <string name="msg_set_to_record">Program set to record</string>
    <string name="msg_unable_to_create_recording">Unable to create recording</string>
    <string name="msg_recording_cancelled">Recording Cancelled</string>
    <string name="msg_unable_to_cancel">Unable to cancel recording</string>
    <string name="lbl_cast_crew">Cast/Crew</string>
    <string name="lbl_chapters">Chapters</string>
    <string name="lbl_specials">Specials</string>
    <string name="lbl_trailers">Trailers</string>
    <string name="lbl_items">Items</string>
    <string name="lbl_item">Item</string>
    <string name="lbl_similar_movies">Similar Movies</string>
    <string name="lbl_seasons">Seasons</string>
    <string name="lbl_upcoming">Upcoming</string>
    <string name="lbl_similar_series">Similar Series</string>
    <string name="lbl_toggle_favorite">Toggle Favorite</string>
    <string name="lbl_toggle_watched">Toggle Watched</string>
    <string name="lbl_sd">SD</string>
    <string name="lbl_if_resumed">" if resumed)"</string>
    <string name="lbl_runs">"Runs"</string>
    <string name="lbl_min">" min"</string>
    <string name="lbl_ends">"Ends"</string>
    <string name="lbl_directed_by">"Directed By"</string>
    <string name="lbl_last_played">"Last Played "</string>
    <string name="lbl_never_played">Never Played</string>
    <string name="lbl_select_server">Select a server</string>
    <string name="lbl_other_options">Other options</string>
    <string name="lbl_enter_manually">Enter Manually</string>
    <string name="lbl_login_with_connect">Login with Connect</string>
    <string name="lbl_select_user">Select a user</string>
    <string name="lbl_paren_login_as">" (login as "</string>
    <string name="lbl_to_change_paren">" to change)"</string>
    <string name="lbl_login_as">"Login as "</string>
    <string name="lbl_tv">TV</string>
    <string name="lbl_people">People</string>
    <string name="lbl_videos">Videos</string>
    <string name="lbl_recordings">Recordings</string>
    <string name="lbl_parens_external">" (external)"</string>
    <string name="lbl_parens_internal">" (internal)"</string>
    <string name="lbl_parens_forced">" (forced)"</string>
    <string name="lbl_none">None</string>
    <string name="msg_video_playback_error">"Video Playback error - "</string>
    <string name="lbl_bracket_unknown"><![CDATA[<Unknown>]]></string>
    <string name="msg_access_restricted">Access Restricted at this time</string>
    <string name="lbl_trailer">"Trailer "</string>
    <string name="lbl_play_trailers">Play Trailer(s)</string>
    <string name="lbl_please_wait">Please Wait</string>
    <string name="lbl_enter_user_name">Enter user name</string>
    <string name="lbl_enter_user_pw">Enter user password</string>
    <string name="msg_little_longer">This is taking a little longer than expected...</string>
    <string name="msg_report_sent">Report sent to developer. Thank you.</string>
    <string name="lbl_report_msg_question">Would you like to send a report to the developer?</string>
    <string name="lbl_no">No</string>
    <string name="msg_report_not_sent">Report NOT sent</string>
    <string name="lbl_yes">Yes</string>
    <string name="msg_error_connecting_server">Error Connecting to Server</string>
    <string name="msg_invalid_id_pw">Invalid User id or password</string>
    <string name="lbl_version_colon">"Version: "</string>
    <string name="lbl_ip_hint">192.168.1.1 or https://myserver.com</string>
    <string name="lbl_enter_server_address">Enter Server Address</string>
    <string name="lbl_valid_server_address">Please enter the server address (IP or domain/machine name)</string>
    <string name="lbl_ok">Ok</string>
    <string name="lbl_born">"Born "</string>
    <string name="lbl_loading_elipses">Loading...</string>
    <string name="lbl_unlock">Unlock</string>
    <string name="msg_playback_not_allowed">Playback not allowed at this time</string>
    <string name="msg_playback_restricted">The administrator has restricted playback of this item at this time</string>
    <string name="msg_playback_incompatible">Cannot play this video format</string>
    <string name="lbl_never">Never</string>
    <string name="lbl_unlock_app">Unlock App</string>
    <string name="lbl_emby_premiere">Upgrade to Emby Premiere</string>
    <string name="lbl_premiere_desc">With Emby Premiere you get not only full functionality in this app but also a host of other features in both the server and other apps across your entire Emby environment.</string>
    <string name="lbl_unlock_desc">Unlock the app for full functionality by purchasing it here. If you are an active Supporter using a local server you should not need to do this. Be sure your server has your supporter key in place.</string>
    <string name="btn_next">Next</string>
    <string name="lbl_search_hint">Search text (select for keyboard)</string>
    <string name="lbl_begin_padding">Begin Padding</string>
    <string name="lbl_end_padding">End Padding</string>
    <string name="lbl_required_to_record">Required to record</string>
    <string name="lbl_record_any_channel">Record on any channel</string>
    <string name="lbl_record_any_time">Record at any time</string>
    <string name="lbl_only_new_episodes">Only New Episodes</string>
    <string name="lbl_repeat_options">Repeat Options</string>
    <string name="lbl_days">Days</string>
    <string name="lbl_save">Save</string>
</resources>