<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="tv.emby.embyatv.validation.UnlockActivity"
    >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/imageView4"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:src="@drawable/moviebg"
        android:alpha=".5" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/logob400"
        android:layout_alignTop="@+id/imageView4"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lbl_unlock_app"
        android:id="@+id/textView"
        android:textSize="28sp"
        android:layout_below="@+id/imageView"
        android:layout_alignParentStart="false"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/lbl_unlock_desc"
        android:id="@+id/textView2"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView"
        android:layout_marginTop="40dp"
        android:paddingEnd="40dp"
        android:paddingStart="40dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_next"
        android:id="@+id/buttonNext"
        android:clickable="true"
        android:focusable="true"
        android:enabled="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="false"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30sp"
        android:layout_toLeftOf="@+id/buttonCancel" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_cancel"
        android:id="@+id/buttonCancel"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="40sp"
        android:layout_marginBottom="30sp" />


</RelativeLayout>
