<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/dark_gradient">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:textSize="25sp"
        android:layout_marginRight="20sp"
        android:ellipsize="end"
        android:maxLines="1"
        android:layout_marginLeft="20sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10sp"
        android:textColor="@android:color/holo_blue_light" />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="25sp"
        android:layout_below="@+id/title"
        android:id="@+id/timeline"
        android:showDividers="middle"
        android:divider="@drawable/blank10x10"
        android:gravity="center"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center_horizontal"
        android:layout_marginBottom="15sp"
        android:id="@+id/buttons">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_save"
            android:id="@+id/okButton"
            android:background="@drawable/emby_button"
            android:minWidth="90dp"
            android:layout_marginRight="10sp"
            android:textColor="@android:color/white" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_cancel"
            android:background="@drawable/emby_button"
            android:id="@+id/cancelButton"
            android:minWidth="90dp"
            android:layout_marginLeft="10sp"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/timeline"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20sp"
        android:gravity="center_horizontal"
        android:showDividers="middle"
        android:divider="@drawable/blank30x30"
        android:id="@+id/linearLayout">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/simple_border"
            android:padding="10sp"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView1"
                android:text="@string/lbl_begin_padding"
                android:layout_marginBottom="10sp"
                android:layout_alignParentTop="true"
                android:textSize="14sp"
                android:layout_marginTop="5sp" />

            <Spinner
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:id="@+id/prePadding"
                android:spinnerMode="dialog"
                android:layout_marginLeft="5dp"
                android:layout_below="@+id/textView1"
                android:background="@drawable/emby_button" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_required_to_record"
                android:id="@+id/prePadReq"
                android:layout_alignParentBottom="false"
                android:layout_below="@+id/prePadding"
                android:textSize="14sp"
                android:layout_alignParentStart="true" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/simple_border"
            android:gravity="center_horizontal"
            android:padding="10sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView2"
                android:text="@string/lbl_end_padding"
                android:layout_marginBottom="10sp"
                android:layout_alignParentTop="true"
                android:textSize="14sp"
                android:layout_alignParentStart="true"
                android:layout_marginTop="5sp" />

            <Spinner
                android:layout_width="140sp"
                android:layout_height="wrap_content"
                android:id="@+id/postPadding"
                android:spinnerMode="dialog"
                android:layout_below="@+id/textView2"
                android:layout_marginLeft="5sp"
                android:background="@drawable/emby_button" />


            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_required_to_record"
                android:id="@+id/postPadReq"
                android:layout_alignParentBottom="false"
                android:textSize="14sp"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/postPadding" />
        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/linearLayout"
        android:paddingTop="20sp"
        android:id="@+id/seriesOptions">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_days"
            android:id="@+id/textView11"
            android:layout_alignLeft="@+id/weekdayOptions"
            android:layout_alignRight="@+id/weekdayOptions"
            android:layout_marginBottom="10sp"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textColor="@android:color/holo_blue_light" />

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/weekdayOptions"
            android:columnCount="2"
            android:rowCount="4"
            android:orientation="vertical"
            android:layout_below="@+id/textView11"
            android:layout_marginLeft="100sp"
            android:minWidth="100sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lbl_repeat_options"
            android:id="@+id/textView12"
            android:gravity="center_horizontal"
            android:layout_marginRight="20sp"
            android:textStyle="bold"
            android:layout_alignLeft="@+id/repeatOptions"
            android:layout_alignRight="@+id/repeatOptions"
            android:textColor="@android:color/holo_blue_light" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/weekdayOptions"
            android:layout_alignParentEnd="true"
            android:layout_marginRight="100sp"
            android:id="@+id/repeatOptions">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_only_new_episodes"
                android:id="@+id/onlyNew"
                android:textSize="14sp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_record_any_time"
                android:id="@+id/anyTime"
                android:textSize="14sp" />

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lbl_record_any_channel"
                android:id="@+id/anyChannel"
                android:textSize="14sp"
                />
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>