<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.startup.DpadPwActivity">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/imageView8"
        android:src="@drawable/dpad_description"
        android:layout_alignParentBottom="true"
        android:scaleType="centerCrop" />

    <TextView android:text="@string/enter_password" android:paddingLeft="20sp" android:paddingTop="20sp" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/dpad_pw_text"
        android:textSize="32sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dpad_entry_desc"
        android:paddingLeft="30sp"
        android:paddingRight="30sp"
        android:layout_marginTop="37dp"
        android:layout_below="@+id/dpad_pw_text"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/dpad_pw_cancel"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/imageView8"
        android:layout_marginBottom="30sp"
        android:paddingLeft="30sp"
        android:maxWidth="450sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="000"
        android:id="@+id/dpad_pw_display"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="125dp"
        android:password="true"
        android:textStyle="bold"
        android:textSize="72sp" />

</RelativeLayout>
