<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="41dp"
        android:layout_marginStart="48dp"
        android:layout_marginTop="27dp"
        android:layout_marginBottom="27dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/app_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/search_icon"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="48dp"
        android:contentDescription="@string/lbl_search"
        android:src="@drawable/ic_search"
        app:layout_constraintBottom_toBottomOf="@id/logo"
        app:layout_constraintStart_toEndOf="@id/logo"
        app:layout_constraintTop_toTopOf="@id/logo" />

    <EditText
        android:id="@+id/search_bar"
        style="@style/Input.Default"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="48dp"
        android:hint="@string/lbl_search_hint"
        android:imeOptions="actionSearch"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="@id/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/search_icon"
        app:layout_constraintTop_toTopOf="@id/logo" />

    <!-- Fragment showing search results -->
    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/results_frame"
        android:name="androidx.leanback.app.RowsSupportFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="27dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/logo" />
</androidx.constraintlayout.widget.ConstraintLayout>
